# EgoDaO

./: .gitignore  README.md  progress.md  pyproject.toml  run.bat  run.sh
.cache/depthai/telemetry/019f18e9-6f37-704b-b0c0-f3292057145a/: 00000001782829379384_c29e4cc4-957e-437f-b843-e6899783d0fd.json  00000001782829383282_edda5f66-4b1e-451e-8675-283b084364e5.json  00000001782829383285_f3798cfd-33e1-41bf-8a31-9f1fea237caf.json  00000001782829384037_dd1e7009-2326-4223-9cb7-a98d2e6d2905.json  00000001782829384039_fcc29de6-b0a5-4fed-a617-b312d5ed5d63.json  00000001782829384055_2495b767-1ea3-432d-b8f4-9cf5d095a242.json  00000001782829384090_9da1c47a-7221-4c68-85af-eb6497e6d3e3.json  00000001782829384091_16741949-d540-46d0-90d5-020d31bb4486.json  00000001782829384092_94d54a8c-808d-44e9-9203-53a469201826.json  00000001782829384092_d50eaa05-3487-4b69-b84f-f313ab12e33e.json  00000001782829384093_25cca5d7-5966-4561-8045-64b1da830798.json  00000001782829384093_50c5a158-d9b1-4a1d-9787-fb99c752c3ff.json  00000001782829384093_d24373d4-e0a1-45bd-940c-0f13dc29499e.json  00000001782829384096_55193fef-0886-4c58-85c1-4833ec28e74d.json  00000001782829384096_fd6f1e44-e591-4264-9955-c43792679016.json  00000001782829384097_2d2878e7-6549-4c63-9328-0389776bb290.json  00000001782829384097_7857ba39-e722-4324-811e-2b388cbf1e79.json  (+8 more)
DaO/: __init__.py  main.py
DaO/config/: __init__.py  config.py
DaO/core/: __init__.py  capture_worker.py  hand_tracker.py  humanego_recorder.py  pipeline.py  recorder.py
DaO/ui/: camera_view.py  imu_3d_widget.py  imu_panel.py  main_window.py  vio_3d_widget.py
(+2 files in other folders)
