[project]
name = "egodao"
version = "0.2.1"
description = "Ego Daq-O — Ego 数据采集与实时处理系统"
requires-python = ">=3.12,<3.13"
dependencies = [
    "depthai>=3.0",
    "mediapipe>=0.10",
    "numpy>=1.24",
    "opencv-python>=4.8",
]

[project.optional-dependencies]
gui = ["pyside6>=6.5"]

[project.scripts]
egodao = "DaO.main:main"

[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "."}
packages = ["DaO", "DaO.config", "DaO.core", "DaO.ui"]
